Added multiple degree timings

--- a/finite_fields/Makefile
+++ b/finite_fields/Makefile
@@ -1,7 +1,8 @@
 NAME = main
+SOURCES = utils.cpp
 
 CXX = nvcc
-CXXFLAGS = -std=c++17 -O3 -rdc=true -x cu
+CXXFLAGS = -std=c++17 -O3 -rdc=true -x cu $(SOURCES)
 
 .DEFAULT_GOAL := $(NAME)
 
